--- a/_research/research-2.html
+++ b/_research/research-2.html
@@ -1,7 +1,7 @@
 ---
-title: "Localization using Deep Topological Maps"
-# excerpt: "Short description of portfolio item number 1<br/><img src='/images/500x300.png'>"
-excerpt: Using deep neural networks to achieve localization task. 
+title: "Multivariate Time Series Data Classification"
+# excerpt: "Short description of portfolio item number 2 <br/><img src='/images/500x300.png'>"
+excerpt: Using CNN and RNN to classify time series data. 
 collection: portfolio
 ---
 
